booking view pdf print and ui

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
