--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "localtunnel": "^2.0.2",
+    "netlify-cli": "^23.4.2",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
+    "surge": "^0.24.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
