--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -18,9 +19,10 @@
     "jspdf": "^3.0.1",
     "localtunnel": "^2.0.2",
     "netlify-cli": "^23.4.2",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "surge": "^0.24.6",
